# StaticHybridModelling

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: static-code-analysis.yml
ideation/: sketchpad.md
src/: Experiment_1_new.py  bench_1.py  darcy.py  experiment_1.py  experiment_1_timing.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py  experiment_baseline.py  main_helmholtz.py  main_poisson.py  poisson_1.py  test.py  training_animation.py
src/examples/: training_PM.py  training_SM.py
src/files/: helmholtz_hybrid_metrics.npy  helmholtz_phys_loss.npy  helmholtz_phys_state_hist.npy
src/files/darcy/: fem_loss.npy  fem_loss_0.05.npy  fem_loss_0.1.npy  fem_loss_0.15.npy  fem_loss_0.2.npy  fem_loss_0.25.npy  fem_loss_0.3.npy  fem_loss_0.35.npy  fem_loss_0.4.npy  fem_loss_0.45.npy  fem_loss_0.5.npy  fem_loss_0.npy  fem_params.npy  fem_params_0.05.npy  fem_params_0.1.npy  fem_params_0.15.npy  fem_params_0.2.npy  fem_params_0.25.npy  fem_params_0.3.npy  fem_params_0.35.npy  fem_params_0.4.npy  fem_params_0.45.npy  fem_params_0.5.npy  fem_params_0.npy  hybrid_loss_phys.npy  hybrid_loss_phys_0.05.npy  hybrid_loss_phys_0.1.npy  hybrid_loss_phys_0.15.npy  hybrid_loss_phys_0.2.npy  hybrid_loss_phys_0.25.npy  hybrid_loss_phys_0.3.npy  (+113 more)
src/models/: __init__.py  other_models.py  physical_model.py  synthetic_model.py
src/tests/: __init__.py  fem_tests.py  physical_model_tests.py  synthetic_model_tests.py
src/tools/: __init__.py  finite_element_method.py  gif_editing.py  plotting.py  symbolic.py  training.py
(+123 files in other folders)
